assets/css/custom.css
.logo {
	position: absolute;
	top: 30px;
	right: 20px;
	width: 180px;
	height: 180px;
	z-index: 10001;
}

.university-logo {
	position: absolute;
	bottom: 3em;
	width: 350px;
	height: auto;
	padding: 1em 2em 1em 2em;
	background: rgba(215,234,251,0.8);
	animation-duration: 2s;
	animation-timing-function: ease-out;
	animation-name: slidein;
	animation-fill-mode: forwards;
	opacity: 0;
}

@keyframes slidein {
	from {
		right: -300px;
		opacity: 0.8;
	}

	to {
		right: 0px;
		opacity: 1;
	}
}

.exit-button {
	position: fixed;
	right: 5px;
	top: 5px;
	width: 40px;
	height: 40px;
	border-radius: 20px;
	line-height: 40px;
	opacity: 0.3;
	background: white;
	color: black;
	transition: all 1s;
	z-index: 10002;
	font-size: 40px;
	cursor: pointer;
	text-align: center;
}

.exit-button:hover {
	opacity: 0.8;
}

@media screen and (max-width: 1400px) {
	.logo {
		width: 140px;
		height: 140px;
	}

	.university-logo {
		width: 280px;
		height: auto;
		bottom: 1.5em;
	}
}

@media screen and (max-width: 736px) {
	.logo {
		width: 80px;
		height: 80px;
	}

	ul.actions {
		display: inline-block;
	}

		ul.actions li {
			padding: 0.5em;
		}
}

@media screen and (max-height: 600px) and (min-width: 1280px) {
	.logo {
		width: 120px;
		height: 120px;
	}
}

@media screen and (max-height: 500px) and (min-width: 1280px) {
	.logo {
		width: 80px;
		height: 80px;
	}
}

.subpage-logo {
	position: absolute;
	top: 10px;
	left: 10px;
	width: 80px;
	height: 80px;
}

@media screen and (max-width: 420px) {
	.subpage-logo {
		position: absolute;
		left: initial;
		right: 15px;
		width: 45px;
		height: 45px;
	}
}

.isle-video {
	margin-left: 40px;
	margin-top: 40px;
}

.no-margin {
	margin: 0px;
}

.card {
	position: relative;
	margin: .5rem 0 1rem 0;
	background-color: #fff;
	-webkit-transition: -webkit-box-shadow .25s;
	transition: -webkit-box-shadow .25s;
	transition: box-shadow .25s;
	transition: box-shadow .25s, -webkit-box-shadow .25s;
	border-radius: 2px;
}

.card .card-content {
	padding: 24px;
	border-radius: 0 0 2px 2px;
}

.card .card-image {
	position: relative;
}

.card .card-action {
	background-color: inherit;
	border-top: 1px solid rgba(160,160,160,0.2);
	position: relative;
	padding: 16px 24px;
}

.card .card-image img {
	display: block;
	border-radius: 2px 2px 0 0;
	position: relative;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
	width: 100%;
	opacity: 0.9;
}

.card .card-image .card-title {
	color: #fff;
	position: absolute;
	bottom: 0;
	left: 0;
	max-width: 100%;
	padding: 24px;
}

.card .card-title {
	font-size: 1.5vw;
	font-weight: 300;
}

.card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating) {
	color: #ffab40;
	margin-right: 24px;
	-webkit-transition: color .3s ease;
	transition: color .3s ease;
	text-transform: uppercase;
}

.card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating):hover {
	color: #ffd8a6;
}

